# scubaclub

./: .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  POSTGRESQL.md  PYPROJECT.md  README.md  SECURITY.md  SETUP.md  docker.md  docker_entrypoint.sh  docker_entrypoint_init.sh  manage.py  postgres.md  pyproject.toml  requirements.txt  setup.md
.github/workflows/: build.yml  deploy.yml  helm.yml
helm/: HELM.md
helm/scubaclub/: Chart.yaml  values.yaml
helm/scubaclub/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
scubaclub/: asgi.py  settings.py  urls.py  wsgi.py
scubaclub/website/: admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
scubaclub/website/migrations/: 0001_initial.py  0002_language_diveclub_admins_diveclub_pending_members_and_more.py  0003_remove_language_name_alter_language_code.py  0004_diveclub_slug_alter_diveclub_website.py  0005_diveevent_club_alter_diveevent_max_participants.py  0006_diveevent_is_cancelled.py  0007_divelocationsuggestion.py  0008_remove_diveclub_language_remove_diveclub_location_and_more.py  0009_remove_diveclub_abbreviation_alter_diveclub_website.py  0010_alter_diveclubtranslation_unique_together_and_more.py  0011_rename_street_diveclub_address.py  0012_alter_diveclubtranslation_unique_together.py  0013_country_alter_diveclub_country_and_more.py  0014_remove_divelocation_description_and_more.py  0015_alter_divelocationsuggestion_suggested_country.py  0016_alter_diveevent_club_alter_diveevent_participants.py  (+1 more)
(+37 files in other folders)
