[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scubaclub"
dynamic = ["version"]
dependencies = [
    "asgiref",
    "boto3",
    "botocore",
    "build",
    "click",
    "colorama",
    "Django",
    "django-storages",
    "dotenv",
    "gunicorn",
    "jmespath",
    "packaging",
    "pip-tools",
    "psycopg",
    "psycopg-binary",
    "pyproject_hooks",
    "python-dateutil",
    "python-dotenv",
    "s3transfer",
    "setuptools",
    "six",
    "sqlparse",
    "tzdata",
    "urllib3",
    "wheel",
    "whitenoise"
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}  # Read from VERSION file
